# ur_ros2

./: README.md
ur_custom_msgs/: CMakeLists.txt  package.xml
ur_custom_msgs/srv/: GetPose.srv
ur_moveit_servo/: CMakeLists.txt  package.xml
ur_moveit_servo/config/: ur_servo_config.yaml
ur_moveit_servo/launch/: teleop_sys_launch.py
ur_moveit_servo/src/: JoyToServoPub_ur10e.cpp
ur_planning/: CMakeLists.txt  package.xml
ur_planning/launch/: ur_moveit.launch.py
ur_planning/src/: ur_planning_server.cpp
ur_planning/ur_planning/: lmq.py  lqm.py  test_pymoveit.py  ur_planning_client.py
ur_robotiq_description/: CMakeLists.txt  package.xml
ur_robotiq_description/launch/: ur_bringup.launch.py  view_ur.launch.py
ur_robotiq_description/urdf/: ur.urdf.xacro  ur_macro.xacro
ur_robotiq_description/urdf/2f_85/: 2f_85.ros2_control.xacro  robotiq_2f_85_macro.urdf.xacro
ur_robotiq_interface/: package.xml  robotiq_command.py  setup.cfg  setup.py
ur_robotiq_interface/launch/: hand_eye_sys_launch.py  ur_robotiq_interface_launch.py
ur_robotiq_interface/ur_robotiq_interface/: calibration_client.py  calibration_server.py  test_client.py  ur_robotiq_client.py  ur_robotiq_server.py
ur_robotiq_moveit_config/: .setup_assistant  package.xml
ur_robotiq_moveit_config/config/: controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ur_servo.yaml
ur_robotiq_moveit_config/launch/: ur_moveit.launch.py  ur_robotiq_moveit.launch.py
ur_robotiq_moveit_config/srdf/: ur.srdf.xacro  ur_macro.srdf.xacro
